<resources>
    <string name="app_name">Cocktail Companion</string>
    <string name="name_text">Cocktail Companion</string>
    <string name="favorites">Favorites</string>
    <string name="_searchName">Search by name</string>
    <string name="_searchIngre">Search by ingredient</string>
    <string name="_searchButton">Search</string>
    <string name="_favoriteTitle">Favorites</string>
    <string name="_homeButton">Home</string>

</resources>